Fix jumpy hero container height

--- a/src/pages/welcome.css
+++ b/src/pages/welcome.css
@@ -15,7 +15,6 @@
 #welcome .hero-container {
   padding-block: 60px;
   height: 100vh;
-  height: 100dvh;
   display: flex;
   flex-direction: column;
 }
